--- a/example project/Project1.vcxproj
+++ b/example project/Project1.vcxproj
@@ -119,12 +119,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Cells.cpp" />
+    <ClCompile Include="DrawObjects.cpp" />
     <ClCompile Include="sfwexample.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="SFW.lib" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Cells.h" />
+    <ClInclude Include="DrawObjects.h" />
     <ClInclude Include="sfwdraw.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
